--- a/sass/components/_card-sub.scss
+++ b/sass/components/_card-sub.scss
@@ -1,39 +1,54 @@
 .card {
     display: inline-flex;
-    width: 55rem;
-    height: 7rem;
+
+    width: fit-content;
+    height: fit-content;
     flex-flow: column;
     justify-content: space-between;
-    margin-top: 20rem;
+    background-color: rgba($color: $color-white, $alpha: 0.8);
+    padding-top: 3rem;
+    padding-bottom: 3rem;
 
     &-heading {
         display: flex;
         justify-content: center;
         margin-top: 0rem;
 
-        & .card-heading {
-            font-size: 3.5rem;
-            color: $color-white;
 
-            & p {
-                display: inline-block;
-                color: $color-primary;
-            }
+        font-size: 3.5rem;
+        color: $color-dark;
+
+        & p {
+            display: inline-block;
+            color: $color-primary;
         }
+
     }
 
     &-main {
         display: flex;
         justify-content: center;
 
-        & .card-main {
-            padding: 0 1rem 0 1rem;
-            text-align: center;
-            font-weight: 800;
-            font-size: 1.3rem;
-            color: $color-white;
-        }
+
+        padding: 0 1rem 0 1rem;
+        text-align: center;
+        font-weight: 800;
+        font-size: 1.3rem;
+        color: $color-dark;
+
 
     }
 
+}
+
+@media only screen and (max-width: 600px) {
+    .card {
+        &-heading {
+            font-size: 2rem;
+        }
+
+        &-main {
+            font-size: 1rem;
+        }
+    }
 }
