--- a/sass/components/_faqslider.scss
+++ b/sass/components/_faqslider.scss
@@ -8,7 +8,6 @@
     padding: .1rem 2.2rem;
     color: $color-dark;
     text-transform: uppercase;
-    font-size: .2rem;
     letter-spacing: .15rem;
     transition: all .6s;
     position: relative;
@@ -19,12 +18,14 @@
     width: 80%;
     margin-bottom: 1rem;
     margin-top: 1rem;
+    margin-left: 4rem;
 
     &-content {
         max-height: 0;
         overflow: hidden;
         width: 80%;
         transition: max-height 0.4s ease-out;
+        margin-left: 4rem;
 
         & p {
             font-size: 1.3rem;
@@ -91,8 +92,64 @@
     }
 }
 
+@media only screen and (max-width: 1260px) {
+    .faqslide {
+        font-size: .8rem;
+        width: 100%;
+
+        &-content {
+            width: 100%;
+
+            & p {
+                font-size: 1rem;
+            }
+        }
+    }
+}
+
 @media only screen and (max-width: 980px) {
     .faqslide {
         font-size: .8rem;
+        margin-left: 0;
+        padding: .2rem 0 .2rem .4rem;
+
+        & p {
+            font-size: 1rem;
+            margin: 0;
+        }
+
+        &-content {
+            margin-left: 0;
+
+            & p {
+                font-size: 1rem;
+                margin: 0;
+            }
+        }
+
+        &>h3 {
+            display: none;
+        }
+    }
+}
+
+
+@media only screen and (max-width: 600px) {
+    .faqslide {
+        width: 100%;
+
+        &-content {
+            width: 100%;
+
+            & p {
+                font-size: 1rem;
+            }
+        }
+
+
+        &>p {
+            font-size: .7rem;
+            letter-spacing: .01rem;
+        }
     }
 }
