--- a/sass/components/_slideshow.scss
+++ b/sass/components/_slideshow.scss
@@ -1,5 +1,6 @@
 .slideshow-container {
     height: 400px;
+    width: 400px;
     position: relative;
     margin: auto;
 }
@@ -8,12 +9,11 @@
 .mySlides {
     transition: transform 1s, opacity 1s;
     position: absolute;
-    width: 350px;
+    width: 200px;
     height: 200px;
     top: 100px;
-    left: 20%;
+    left: 10%;
     opacity: 0;
-    padding: 0 10rem 0 10rem;
     transform: translateX(-100px);
     outline: 2px solid $color-dark;
     outline-offset: .9rem;
@@ -31,7 +31,7 @@
     cursor: pointer;
     position: absolute;
     top: 50%;
-    right: 20%;
+    right: 0rem;
     width: auto;
     margin-top: -22px;
     padding: 16px;
@@ -91,5 +91,12 @@
     to {
         opacity: 1;
         transform: translateX(0px)
+    }
+}
+
+
+@media only screen and (max-width: 600px) {
+    .slideshow-container {
+        width: 250px;
     }
 }
