--- a/sass/layout/_boxes.scss
+++ b/sass/layout/_boxes.scss
@@ -1,5 +1,5 @@
 .boxes {
-    height: 100vh;
+    height: 1000px;
     position: relative;
 
     &-cap-heading {
@@ -23,10 +23,10 @@
     transform: scaleX(0);
     transition: transform .4s ease;
     height: 100%;
+    width: 100%;
     padding-top: 10rem;
 
     & h2 {
-        height: 6rem;
         padding: 0 4rem 0 5rem;
     }
 
@@ -57,7 +57,6 @@
         background-color: rgba($color: $color-light, $alpha: .5);
 
         & h2 {
-            height: 6rem;
             padding: 0 4rem 0 10rem;
         }
 
@@ -94,7 +93,6 @@
         & h2 {
             font-size: 1.2rem;
             display: inline-block;
-            height: 0;
             padding: 0 4rem 0 0;
         }
 
@@ -110,4 +108,45 @@
         }
     }
 
+}
+
+@media only screen and (max-width: 600px) {
+    .box {
+        & h2 {
+            padding: 0 2rem 0 0;
+        }
+
+        & h1 {
+            padding: 0 2rem 0 2rem;
+
+        }
+
+        & p {
+            padding: 0 2rem 0 2rem;
+        }
+    }
+}
+
+@media only screen and (max-width: 550px) {
+    .boxes {
+        height: 600px;
+
+    }
+
+    .box {
+        height: 7rem;
+
+        & h2 {
+            padding: 0 2rem 0 0;
+        }
+
+        & h1 {
+            padding: 0 2rem 0 2rem;
+
+        }
+
+        & p {
+            visibility: hidden;
+        }
+    }
 }
