--- a/sass/components/_sidenav.scss
+++ b/sass/components/_sidenav.scss
@@ -178,4 +178,14 @@
         display: none;
     }
 
+    .navlogo {
+        top: 1rem;
+        left: 1rem;
+        position: absolute;
+
+        & svg {
+            height: 70px;
+        }
+    }
+
 }
