--- a/sass/components/_contact.scss
+++ b/sass/components/_contact.scss
@@ -2,7 +2,7 @@
     margin: 10px;
     padding: 30px;
     width: 400px;
-    height: 400px;
+    height: fit-content;
     border: 2px solid $color-dark;
     position: relative;
 
