--- a/sass/layout/_impressum.scss
+++ b/sass/layout/_impressum.scss
@@ -1,18 +1,56 @@
 .impressum {
     &>.wrapper {
 
-        &>h1 {
-            font-size: 4rem;
-        }
 
         &>h2 {
             font-size: 2rem;
         }
 
         &>p {
-            margin-right: 20rem;
             margin-left: 15rem;
             margin-bottom: 2rem;
+        }
+    }
+}
+
+@media only screen and (max-width: 980px) {
+    .impressum {
+        &>.wrapper {
+
+
+            &>h1 {
+                margin-left: 10rem;
+            }
+
+            &>h2 {
+                font-size: 2rem;
+            }
+
+            &>p {
+                margin-left: 15rem;
+                margin-bottom: 2rem;
+            }
+        }
+    }
+}
+
+@media only screen and (max-width: 600px) {
+    .impressum {
+        &>.wrapper {
+
+
+            &>h1 {
+                margin-left: 7rem;
+            }
+
+            &>h2 {
+                font-size: 1.2rem;
+            }
+
+            &>p {
+                margin-left: 5rem;
+                margin-bottom: 2rem;
+            }
         }
     }
 }
